Memperbaiki error dan memperbarui yaml swagger untuk order
