# server/src/api.yaml
@@ -88,9 +88,9 @@ paths:
               $ref: '#/components/schemas/Add_Book_Payload'
       responses:
         200:
-          description: 'Regitration Successfull'
+          description: 'Added Successfull'
         201:
-          description: 'User Created'
+          description: 'Book Created'
         400:
           description: 'Bad Request'
         500:
@@ -204,6 +204,113 @@ paths:
           500:
             description: 'Internal Server Error'
 
+  /orders: 
+    post:
+      tags: 
+      - Orders
+      summary: Adding Order for Sale 
+      description: "Add Order by Admin"
+      requestBody:
+        description: 'Payload for Add Order'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Add_Order_Payload'
+      responses:
+        200:
+          description: 'Added Successfull'
+        201:
+          description: 'Order Created'
+        400:
+          description: 'Bad Request'
+        500:
+          description: 'Internal Server Error'
+    get:
+      tags:
+      - Orders
+      summary: Get Orders List
+      description: "Authorized user can listing Orders"
+      parameters:
+        - name: limit
+          in: query
+          description: Limit the number of results
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+        - name: page
+          in: query
+          description: Offset the results by a certain number
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+        - name: title
+          in: query
+          description: Title of the book
+          required: false
+          schema:
+            type: string
+        - name: author
+          in: query
+          description: Author of the book
+          required: false
+          schema:
+            type: string
+        - name: maxPrice
+          in: query
+          description: maxPrice of the book
+          required: false
+          schema:
+            type: integer
+        - name: minPrice
+          in: query
+          description: minPrice of the book
+          required: false
+          schema:
+            type: integer
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: 'Fetch Order List Successfull'
+        401:
+          description: 'Unauthorized'
+        500:
+          description: 'Internal Server Error'
+
+  /orders/{id}:
+      get:
+        tags:
+          - Orders
+        summary: Get Order by ID
+        description: "Get specific order details by ID (Authorized)"
+        parameters:
+          - name: id
+            in: path
+            required: true
+            description: ID of the order
+            schema:
+              type: string
+        security:
+          - bearerAuth: []
+        responses:
+          200:
+            description: 'Order Found Successfully'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Add_Order_Payload'
+          400:
+            description: 'Bad Request'
+          401:
+            description: 'Unauthorized'
+          404:
+            description: 'Book Not Found'
+          500:
+            description: 'Internal Server Error'      
+
 components:
   securitySchemes:
     bearerAuth:
@@ -276,6 +383,20 @@ components:
         quantity_available:
           type: number,
           example: 100
+          
+    Add_Order_Payload:
+      title: Add_Order_Payload
+      type: object
+      properties:
+        book_id:
+          type: number
+          example: 1
+        user_id:
+          type: number
+          example: 1
+        quantity:
+          type: number,
+          example: 1
 
 security:
   - bearerAuth: []
